docs/api/qiskit/0.24/qiskit.optimization.problems.QuadraticProgram.md
---
title: QuadraticProgram
description: API reference for qiskit.optimization.problems.QuadraticProgram
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.optimization.problems.QuadraticProgram
---

<span id="qiskit-optimization-problems-quadraticprogram" />

# qiskit.optimization.problems.QuadraticProgram

<span id="qiskit.optimization.problems.QuadraticProgram" />

`QuadraticProgram(name='')` [GitHub](https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.8/qiskit/optimization/problems/quadratic_program.py "view source code")

Quadratically Constrained Quadratic Program representation.

This representation supports inequality and equality constraints, as well as continuous, binary, and integer variables.

**Parameters**

**name** (`str`) – The name of the quadratic program.

### \_\_init\_\_

<span id="qiskit.optimization.problems.QuadraticProgram.__init__" />

`__init__(name='')`

**Parameters**

**name** (`str`) – The name of the quadratic program.

## Methods

|                                                                                                                                                                                                 |                                                                                                                     |
| ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------- |
| [`__init__`](#qiskit.optimization.problems.QuadraticProgram.__init__ "qiskit.optimization.problems.QuadraticProgram.__init__")(\[name])                                                         | **type name**`str`                                                                                                  |
| [`binary_var`](#qiskit.optimization.problems.QuadraticProgram.binary_var "qiskit.optimization.problems.QuadraticProgram.binary_var")(\[name])                                                   | Adds a binary variable to the quadratic program.                                                                    |
| [`clear`](#qiskit.optimization.problems.QuadraticProgram.clear "qiskit.optimization.problems.QuadraticProgram.clear")()                                                                         | Clears the quadratic program, i.e., deletes all variables, constraints, the objective function as well as the name. |
| [`continuous_var`](#qiskit.optimization.problems.QuadraticProgram.continuous_var "qiskit.optimization.problems.QuadraticProgram.continuous_var")(\[lowerbound, upperbound, name])               | Adds a continuous variable to the quadratic program.                                                                |
| [`export_as_lp_string`](#qiskit.optimization.problems.QuadraticProgram.export_as_lp_string "qiskit.optimization.problems.QuadraticProgram.export_as_lp_string")()                               | Returns the quadratic program as a string of LP format.                                                             |
| [`from_docplex`](#qiskit.optimization.problems.QuadraticProgram.from_docplex "qiskit.optimization.problems.QuadraticProgram.from_docplex")(model)                                               | Loads this quadratic program from a docplex model.                                                                  |
| [`from_ising`](#qiskit.optimization.problems.QuadraticProgram.from_ising "qiskit.optimization.problems.QuadraticProgram.from_ising")(qubit\_op\[, offset, linear])                              | Create a quadratic program from a qubit operator and a shift value.                                                 |
| [`get_feasibility_info`](#qiskit.optimization.problems.QuadraticProgram.get_feasibility_info "qiskit.optimization.problems.QuadraticProgram.get_feasibility_info")(x)                           | Returns whether a solution is feasible or not along with the violations.                                            |
| [`get_linear_constraint`](#qiskit.optimization.problems.QuadraticProgram.get_linear_constraint "qiskit.optimization.problems.QuadraticProgram.get_linear_constraint")(i)                        | Returns a linear constraint for a given name or index.                                                              |
| [`get_num_binary_vars`](#qiskit.optimization.problems.QuadraticProgram.get_num_binary_vars "qiskit.optimization.problems.QuadraticProgram.get_num_binary_vars")()                               | Returns the total number of binary variables.                                                                       |
| [`get_num_continuous_vars`](#qiskit.optimization.problems.QuadraticProgram.get_num_continuous_vars "qiskit.optimization.problems.QuadraticProgram.get_num_continuous_vars")()                   | Returns the total number of continuous variables.                                                                   |
| [`get_num_integer_vars`](#qiskit.optimization.problems.QuadraticProgram.get_num_integer_vars "qiskit.optimization.problems.QuadraticProgram.get_num_integer_vars")()                            | Returns the total number of integer variables.                                                                      |
| [`get_num_linear_constraints`](#qiskit.optimization.problems.QuadraticProgram.get_num_linear_constraints "qiskit.optimization.problems.QuadraticProgram.get_num_linear_constraints")()          | Returns the number of linear constraints.                                                                           |
| [`get_num_quadratic_constraints`](#qiskit.optimization.problems.QuadraticProgram.get_num_quadratic_constraints "qiskit.optimization.problems.QuadraticProgram.get_num_quadratic_constraints")() | Returns the number of quadratic constraints.                                                                        |
| [`get_num_vars`](#qiskit.optimization.problems.QuadraticProgram.get_num_vars "qiskit.optimization.problems.QuadraticProgram.get_num_vars")(\[vartype])                                          | Returns the total number of variables or the number of variables of the specified type.                             |
| [`get_quadratic_constraint`](#qiskit.optimization.problems.QuadraticProgram.get_quadratic_constraint "qiskit.optimization.problems.QuadraticProgram.get_quadratic_constraint")(i)               | Returns a quadratic constraint for a given name or index.                                                           |
| [`get_variable`](#qiskit.optimization.problems.QuadraticProgram.get_variable "qiskit.optimization.problems.QuadraticProgram.get_variable")(i)                                                   | Returns a variable for a given name or index.                                                                       |
| [`integer_var`](#qiskit.optimization.problems.QuadraticProgram.integer_var "qiskit.optimization.problems.QuadraticProgram.integer_var")(\[lowerbound, upperbound, name])                        | Adds an integer variable to the quadratic program.                                                                  |
| [`is_feasible`](#qiskit.optimization.problems.QuadraticProgram.is_feasible "qiskit.optimization.problems.QuadraticProgram.is_feasible")(x)                                                      | Returns whether a solution is feasible or not.                                                                      |
| [`linear_constraint`](#qiskit.optimization.problems.QuadraticProgram.linear_constraint "qiskit.optimization.problems.QuadraticProgram.linear_constraint")(\[linear, sense, rhs, name])          | Adds a linear equality constraint to the quadratic program of the form:                                             |
| [`maximize`](#qiskit.optimization.problems.QuadraticProgram.maximize "qiskit.optimization.problems.QuadraticProgram.maximize")(\[constant, linear, quadratic])                                  | Sets a quadratic objective to be maximized.                                                                         |
| [`minimize`](#qiskit.optimization.problems.QuadraticProgram.minimize "qiskit.optimization.problems.QuadraticProgram.minimize")(\[constant, linear, quadratic])                                  | Sets a quadratic objective to be minimized.                                                                         |
| [`pprint_as_string`](#qiskit.optimization.problems.QuadraticProgram.pprint_as_string "qiskit.optimization.problems.QuadraticProgram.pprint_as_string")()                                        | DEPRECATED Returns the quadratic program as a string in Docplex’s pretty print format.                              |
| [`prettyprint`](#qiskit.optimization.problems.QuadraticProgram.prettyprint "qiskit.optimization.problems.QuadraticProgram.prettyprint")(\[out])                                                 | DEPRECATED Pretty prints the quadratic program to a given output stream (None = default).                           |
| [`quadratic_constraint`](#qiskit.optimization.problems.QuadraticProgram.quadratic_constraint "qiskit.optimization.problems.QuadraticProgram.quadratic_constraint")(\[linear, quadratic, …])     | Adds a quadratic equality constraint to the quadratic program of the form:                                          |
| [`read_from_lp_file`](#qiskit.optimization.problems.QuadraticProgram.read_from_lp_file "qiskit.optimization.problems.QuadraticProgram.read_from_lp_file")(filename)                             | Loads the quadratic program from a LP file.                                                                         |
| [`remove_linear_constraint`](#qiskit.optimization.problems.QuadraticProgram.remove_linear_constraint "qiskit.optimization.problems.QuadraticProgram.remove_linear_constraint")(i)               | Remove a linear constraint                                                                                          |
| [`remove_quadratic_constraint`](#qiskit.optimization.problems.QuadraticProgram.remove_quadratic_constraint "qiskit.optimization.problems.QuadraticProgram.remove_quadratic_constraint")(i)      | Remove a quadratic constraint                                                                                       |
| [`substitute_variables`](#qiskit.optimization.problems.QuadraticProgram.substitute_variables "qiskit.optimization.problems.QuadraticProgram.substitute_variables")(\[constants, variables])     | Substitutes variables with constants or other variables.                                                            |
| [`to_docplex`](#qiskit.optimization.problems.QuadraticProgram.to_docplex "qiskit.optimization.problems.QuadraticProgram.to_docplex")()                                                          | Returns a docplex model corresponding to this quadratic program.                                                    |
| [`to_ising`](#qiskit.optimization.problems.QuadraticProgram.to_ising "qiskit.optimization.problems.QuadraticProgram.to_ising")()                                                                | Return the Ising Hamiltonian of this problem.                                                                       |
| [`write_to_lp_file`](#qiskit.optimization.problems.QuadraticProgram.write_to_lp_file "qiskit.optimization.problems.QuadraticProgram.write_to_lp_file")(filename)                                | Writes the quadratic program to an LP file.                                                                         |

## Attributes

|                                                                                                                                                                                         |                                                                                   |
| --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------- |
| [`linear_constraints`](#qiskit.optimization.problems.QuadraticProgram.linear_constraints "qiskit.optimization.problems.QuadraticProgram.linear_constraints")                            | Returns the list of linear constraints of the quadratic program.                  |
| [`linear_constraints_index`](#qiskit.optimization.problems.QuadraticProgram.linear_constraints_index "qiskit.optimization.problems.QuadraticProgram.linear_constraints_index")          | Returns the dictionary that maps the name of a linear constraint to its index.    |
| [`name`](#qiskit.optimization.problems.QuadraticProgram.name "qiskit.optimization.problems.QuadraticProgram.name")                                                                      | Returns the name of the quadratic program.                                        |
| [`objective`](#qiskit.optimization.problems.QuadraticProgram.objective "qiskit.optimization.problems.QuadraticProgram.objective")                                                       | Returns the quadratic objective.                                                  |
| [`quadratic_constraints`](#qiskit.optimization.problems.QuadraticProgram.quadratic_constraints "qiskit.optimization.problems.QuadraticProgram.quadratic_constraints")                   | Returns the list of quadratic constraints of the quadratic program.               |
| [`quadratic_constraints_index`](#qiskit.optimization.problems.QuadraticProgram.quadratic_constraints_index "qiskit.optimization.problems.QuadraticProgram.quadratic_constraints_index") | Returns the dictionary that maps the name of a quadratic constraint to its index. |
| [`status`](#qiskit.optimization.problems.QuadraticProgram.status "qiskit.optimization.problems.QuadraticProgram.status")                                                                | Status of the quadratic program.                                                  |
| [`variables`](#qiskit.optimization.problems.QuadraticProgram.variables "qiskit.optimization.problems.QuadraticProgram.variables")                                                       | Returns the list of variables of the quadratic program.                           |
| [`variables_index`](#qiskit.optimization.problems.QuadraticProgram.variables_index "qiskit.optimization.problems.QuadraticProgram.variables_index")                                     | Returns the dictionary that maps the name of a variable to its index.             |

<span id="qiskit.optimization.problems.QuadraticProgram.Status" />

### Status

alias of `QuadraticProgramStatus`

### binary\_var

<span id="qiskit.optimization.problems.QuadraticProgram.binary_var" />

`binary_var(name=None)`

Adds a binary variable to the quadratic program.

**Parameters**

**name** (`Optional`\[`str`]) – The name of the variable.

**Return type**

`Variable`

**Returns**

The added variable.

**Raises**

[**QiskitOptimizationError**](qiskit.optimization.QiskitOptimizationError "qiskit.optimization.QiskitOptimizationError") – if the variable name is already occupied.

### clear

<span id="qiskit.optimization.problems.QuadraticProgram.clear" />

`clear()`

Clears the quadratic program, i.e., deletes all variables, constraints, the objective function as well as the name.

**Return type**

`None`

### continuous\_var

<span id="qiskit.optimization.problems.QuadraticProgram.continuous_var" />

`continuous_var(lowerbound=0, upperbound=1e+20, name=None)`

Adds a continuous variable to the quadratic program.

**Parameters**

*   **lowerbound** (`Union`\[`float`, `int`]) – The lowerbound of the variable.
*   **upperbound** (`Union`\[`float`, `int`]) – The upperbound of the variable.
*   **name** (`Optional`\[`str`]) – The name of the variable.

**Return type**

`Variable`

**Returns**

The added variable.

**Raises**

[**QiskitOptimizationError**](qiskit.optimization.QiskitOptimizationError "qiskit.optimization.QiskitOptimizationError") – if the variable name is already occupied.

### export\_as\_lp\_string

<span id="qiskit.optimization.problems.QuadraticProgram.export_as_lp_string" />

`export_as_lp_string()`

Returns the quadratic program as a string of LP format.

**Return type**

`str`

**Returns**

A string representing the quadratic program.

### from\_docplex

<span id="qiskit.optimization.problems.QuadraticProgram.from_docplex" />

`from_docplex(model)`

Loads this quadratic program from a docplex model.

Note that this supports only basic functions of docplex as follows: - quadratic objective function - linear / quadratic constraints - binary / integer / continuous variables

**Parameters**

**model** (`Model`) – The docplex model to be loaded.

**Raises**

[**QiskitOptimizationError**](qiskit.optimization.QiskitOptimizationError "qiskit.optimization.QiskitOptimizationError") – if the model contains unsupported elements.

**Return type**

`None`

### from\_ising

<span id="qiskit.optimization.problems.QuadraticProgram.from_ising" />

`from_ising(qubit_op, offset=0.0, linear=False)`

Create a quadratic program from a qubit operator and a shift value.

**Parameters**

*   **qubit\_op** (`Union`\[`OperatorBase`, `WeightedPauliOperator`]) – The qubit operator of the problem.
*   **offset** (`float`) – The constant value in the Ising Hamiltonian.
*   **linear** (`bool`) – If linear is True, $x^2$ is treated as a linear term since $x^2 = x$ for $x \in \{0,1\}$. Else, $x^2$ is treat as a quadratic term. The default value is False.

**Raises**

*   [**QiskitOptimizationError**](qiskit.optimization.QiskitOptimizationError "qiskit.optimization.QiskitOptimizationError") – If there are Pauli Xs in any Pauli term
*   [**QiskitOptimizationError**](qiskit.optimization.QiskitOptimizationError "qiskit.optimization.QiskitOptimizationError") – If there are more than 2 Pauli Zs in any Pauli term
*   **NotImplementedError** – If the input operator is a ListOp

**Return type**

`None`

### get\_feasibility\_info

<span id="qiskit.optimization.problems.QuadraticProgram.get_feasibility_info" />

`get_feasibility_info(x)`

Returns whether a solution is feasible or not along with the violations. :type x: `Union`\[`List`\[`float`], `ndarray`] :param x: a solution value, such as returned in an optimizer result.

**Returns**

Whether the solution provided is feasible or not. List\[Variable]: List of variables which are violated. List\[Constraint]: List of constraints which are violated.

**Return type**

feasible

**Raises**

[**QiskitOptimizationError**](qiskit.optimization.QiskitOptimizationError "qiskit.optimization.QiskitOptimizationError") – If the input x is not same len as total vars

### get\_linear\_constraint

<span id="qiskit.optimization.problems.QuadraticProgram.get_linear_constraint" />

`get_linear_constraint(i)`

Returns a linear constraint for a given name or index.

**Parameters**

**i** (`Union`\[`int`, `str`]) – the index or name of the constraint.

**Return type**

`LinearConstraint`

**Returns**

The corresponding constraint.

**Raises**

*   **IndexError** – if the index is out of the list size
*   **KeyError** – if the name does not exist

### get\_num\_binary\_vars

<span id="qiskit.optimization.problems.QuadraticProgram.get_num_binary_vars" />

`get_num_binary_vars()`

Returns the total number of binary variables.

**Return type**

`int`

**Returns**

The total number of binary variables.

### get\_num\_continuous\_vars

<span id="qiskit.optimization.problems.QuadraticProgram.get_num_continuous_vars" />

`get_num_continuous_vars()`

Returns the total number of continuous variables.

**Return type**

`int`

**Returns**

The total number of continuous variables.

### get\_num\_integer\_vars

<span id="qiskit.optimization.problems.QuadraticProgram.get_num_integer_vars" />

`get_num_integer_vars()`

Returns the total number of integer variables.

**Return type**

`int`

**Returns**

The total number of integer variables.

### get\_num\_linear\_constraints

<span id="qiskit.optimization.problems.QuadraticProgram.get_num_linear_constraints" />

`get_num_linear_constraints()`

Returns the number of linear constraints.

**Return type**

`int`

**Returns**

The number of linear constraints.

### get\_num\_quadratic\_constraints

<span id="qiskit.optimization.problems.QuadraticProgram.get_num_quadratic_constraints" />

`get_num_quadratic_constraints()`

Returns the number of quadratic constraints.

**Return type**

`int`

**Returns**

The number of quadratic constraints.

### get\_num\_vars

<span id="qiskit.optimization.problems.QuadraticProgram.get_num_vars" />

`get_num_vars(vartype=None)`

Returns the total number of variables or the number of variables of the specified type.

**Parameters**

**vartype** (`Optional`\[`VarType`]) – The type to be filtered on. All variables are counted if None.

**Return type**

`int`

**Returns**

The total number of variables.

### get\_quadratic\_constraint

<span id="qiskit.optimization.problems.QuadraticProgram.get_quadratic_constraint" />

`get_quadratic_constraint(i)`

Returns a quadratic constraint for a given name or index.

**Parameters**

**i** (`Union`\[`int`, `str`]) – the index or name of the constraint.

**Return type**

`QuadraticConstraint`

**Returns**

The corresponding constraint.

**Raises**

*   **IndexError** – if the index is out of the list size
*   **KeyError** – if the name does not exist

### get\_variable

<span id="qiskit.optimization.problems.QuadraticProgram.get_variable" />

`get_variable(i)`

Returns a variable for a given name or index.

**Parameters**

**i** (`Union`\[`int`, `str`]) – the index or name of the variable.

**Return type**

`Variable`

**Returns**

The corresponding variable.

### integer\_var

<span id="qiskit.optimization.problems.QuadraticProgram.integer_var" />

`integer_var(lowerbound=0, upperbound=1e+20, name=None)`

Adds an integer variable to the quadratic program.

**Parameters**

*   **lowerbound** (`Union`\[`float`, `int`]) – The lowerbound of the variable.
*   **upperbound** (`Union`\[`float`, `int`]) – The upperbound of the variable.
*   **name** (`Optional`\[`str`]) – The name of the variable.

**Return type**

`Variable`

**Returns**

The added variable.

**Raises**

[**QiskitOptimizationError**](qiskit.optimization.QiskitOptimizationError "qiskit.optimization.QiskitOptimizationError") – if the variable name is already occupied.

### is\_feasible

<span id="qiskit.optimization.problems.QuadraticProgram.is_feasible" />

`is_feasible(x)`

Returns whether a solution is feasible or not.

**Parameters**

**x** (`Union`\[`List`\[`float`], `ndarray`]) – a solution value, such as returned in an optimizer result.

**Return type**

`bool`

**Returns**

`True` if the solution provided is feasible otherwise `False`.

### linear\_constraint

<span id="qiskit.optimization.problems.QuadraticProgram.linear_constraint" />

`linear_constraint(linear=None, sense='<=', rhs=0.0, name=None)`

**Adds a linear equality constraint to the quadratic program of the form:**

linear \* x sense rhs.

**Parameters**

*   **linear** (`Union`\[`ndarray`, `spmatrix`, `List`\[`float`], `Dict`\[`Union`\[`int`, `str`], `float`], `None`]) – The linear coefficients of the left-hand-side of the constraint.
*   **sense** (`Union`\[`str`, `ConstraintSense`]) – The sense of the constraint, - ‘==’, ‘=’, ‘E’, and ‘EQ’ denote ‘equal to’. - ‘>=’, ‘>’, ‘G’, and ‘GE’ denote ‘greater-than-or-equal-to’. - ‘\<=’, ‘\<’, ‘L’, and ‘LE’ denote ‘less-than-or-equal-to’.
*   **rhs** (`float`) – The right hand side of the constraint.
*   **name** (`Optional`\[`str`]) – The name of the constraint.

**Return type**

`LinearConstraint`

**Returns**

The added constraint.

**Raises**

[**QiskitOptimizationError**](qiskit.optimization.QiskitOptimizationError "qiskit.optimization.QiskitOptimizationError") – if the constraint name already exists or the sense is not valid.

### linear\_constraints

<span id="qiskit.optimization.problems.QuadraticProgram.linear_constraints" />

`property linear_constraints`

Returns the list of linear constraints of the quadratic program.

**Return type**

`List`\[`LinearConstraint`]

**Returns**

List of linear constraints.

### linear\_constraints\_index

<span id="qiskit.optimization.problems.QuadraticProgram.linear_constraints_index" />

`property linear_constraints_index`

Returns the dictionary that maps the name of a linear constraint to its index.

**Return type**

`Dict`\[`str`, `int`]

**Returns**

The linear constraint index dictionary.

### maximize

<span id="qiskit.optimization.problems.QuadraticProgram.maximize" />

`maximize(constant=0.0, linear=None, quadratic=None)`

Sets a quadratic objective to be maximized.

**Parameters**

*   **constant** (`float`) – the constant offset of the objective.
*   **linear** (`Union`\[`ndarray`, `spmatrix`, `List`\[`float`], `Dict`\[`Union`\[`int`, `str`], `float`], `None`]) – the coefficients of the linear part of the objective.
*   **quadratic** (`Union`\[`ndarray`, `spmatrix`, `List`\[`List`\[`float`]], `Dict`\[`Tuple`\[`Union`\[`int`, `str`], `Union`\[`int`, `str`]], `float`], `None`]) – the coefficients of the quadratic part of the objective.

**Return type**

`None`

**Returns**

The created quadratic objective.

### minimize

<span id="qiskit.optimization.problems.QuadraticProgram.minimize" />

`minimize(constant=0.0, linear=None, quadratic=None)`

Sets a quadratic objective to be minimized.

**Parameters**

*   **constant** (`float`) – the constant offset of the objective.
*   **linear** (`Union`\[`ndarray`, `spmatrix`, `List`\[`float`], `Dict`\[`Union`\[`int`, `str`], `float`], `None`]) – the coefficients of the linear part of the objective.
*   **quadratic** (`Union`\[`ndarray`, `spmatrix`, `List`\[`List`\[`float`]], `Dict`\[`Tuple`\[`Union`\[`int`, `str`], `Union`\[`int`, `str`]], `float`], `None`]) – the coefficients of the quadratic part of the objective.

**Return type**

`None`

**Returns**

The created quadratic objective.

### name

<span id="qiskit.optimization.problems.QuadraticProgram.name" />

`property name`

Returns the name of the quadratic program.

**Return type**

`str`

**Returns**

The name of the quadratic program.

### objective

<span id="qiskit.optimization.problems.QuadraticProgram.objective" />

`property objective`

Returns the quadratic objective.

**Return type**

`QuadraticObjective`

**Returns**

The quadratic objective.

### pprint\_as\_string

<span id="qiskit.optimization.problems.QuadraticProgram.pprint_as_string" />

`pprint_as_string()`

DEPRECATED Returns the quadratic program as a string in Docplex’s pretty print format. :rtype: `str` :returns: A string representing the quadratic program.

### prettyprint

<span id="qiskit.optimization.problems.QuadraticProgram.prettyprint" />

`prettyprint(out=None)`

DEPRECATED Pretty prints the quadratic program to a given output stream (None = default).

**Parameters**

**out** (`Optional`\[`str`]) – The output stream or file name to print to. if you specify a file name, the output file name is has ‘.mod’ as suffix.

**Return type**

`None`

### quadratic\_constraint

<span id="qiskit.optimization.problems.QuadraticProgram.quadratic_constraint" />

`quadratic_constraint(linear=None, quadratic=None, sense='<=', rhs=0.0, name=None)`

**Adds a quadratic equality constraint to the quadratic program of the form:**

x \* Q \* x \<= rhs.

**Parameters**

*   **linear** (`Union`\[`ndarray`, `spmatrix`, `List`\[`float`], `Dict`\[`Union`\[`int`, `str`], `float`], `None`]) – The linear coefficients of the constraint.
*   **quadratic** (`Union`\[`ndarray`, `spmatrix`, `List`\[`List`\[`float`]], `Dict`\[`Tuple`\[`Union`\[`int`, `str`], `Union`\[`int`, `str`]], `float`], `None`]) – The quadratic coefficients of the constraint.
*   **sense** (`Union`\[`str`, `ConstraintSense`]) – The sense of the constraint, - ‘==’, ‘=’, ‘E’, and ‘EQ’ denote ‘equal to’. - ‘>=’, ‘>’, ‘G’, and ‘GE’ denote ‘greater-than-or-equal-to’. - ‘\<=’, ‘\<’, ‘L’, and ‘LE’ denote ‘less-than-or-equal-to’.
*   **rhs** (`float`) – The right hand side of the constraint.
*   **name** (`Optional`\[`str`]) – The name of the constraint.

**Return type**

`QuadraticConstraint`

**Returns**

The added constraint.

**Raises**

[**QiskitOptimizationError**](qiskit.optimization.QiskitOptimizationError "qiskit.optimization.QiskitOptimizationError") – if the constraint name already exists.

### quadratic\_constraints

<span id="qiskit.optimization.problems.QuadraticProgram.quadratic_constraints" />

`property quadratic_constraints`

Returns the list of quadratic constraints of the quadratic program.

**Return type**

`List`\[`QuadraticConstraint`]

**Returns**

List of quadratic constraints.

### quadratic\_constraints\_index

<span id="qiskit.optimization.problems.QuadraticProgram.quadratic_constraints_index" />

`property quadratic_constraints_index`

Returns the dictionary that maps the name of a quadratic constraint to its index.

**Return type**

`Dict`\[`str`, `int`]

**Returns**

The quadratic constraint index dictionary.

### read\_from\_lp\_file

<span id="qiskit.optimization.problems.QuadraticProgram.read_from_lp_file" />

`read_from_lp_file(filename)`

Loads the quadratic program from a LP file.

**Parameters**

**filename** (`str`) – The filename of the file to be loaded.

**Raises**

*   **FileNotFoundError** – If the file does not exist.
*   [**MissingOptionalLibraryError**](qiskit.aqua.MissingOptionalLibraryError "qiskit.aqua.MissingOptionalLibraryError") – If CPLEX is not installed.

<Admonition title="Note" type="note">
  This method requires CPLEX to be installed and present in `PYTHONPATH`.
</Admonition>

**Return type**

`None`

### remove\_linear\_constraint

<span id="qiskit.optimization.problems.QuadraticProgram.remove_linear_constraint" />

`remove_linear_constraint(i)`

Remove a linear constraint

**Parameters**

**i** (`Union`\[`str`, `int`]) – an index or a name of a linear constraint

**Raises**

*   **KeyError** – if name does not exist
*   **IndexError** – if index is out of range

**Return type**

`None`

### remove\_quadratic\_constraint

<span id="qiskit.optimization.problems.QuadraticProgram.remove_quadratic_constraint" />

`remove_quadratic_constraint(i)`

Remove a quadratic constraint

**Parameters**

**i** (`Union`\[`str`, `int`]) – an index or a name of a quadratic constraint

**Raises**

*   **KeyError** – if name does not exist
*   **IndexError** – if index is out of range

**Return type**

`None`

### status

<span id="qiskit.optimization.problems.QuadraticProgram.status" />

`property status`

Status of the quadratic program. It can be infeasible due to variable substitution.

**Return type**

`QuadraticProgramStatus`

**Returns**

The status of the quadratic program

### substitute\_variables

<span id="qiskit.optimization.problems.QuadraticProgram.substitute_variables" />

`substitute_variables(constants=None, variables=None)`

Substitutes variables with constants or other variables.

**Parameters**

*   **constants** (`Optional`\[`Dict`\[`Union`\[`int`, `str`], `float`]]) – replace variable by constant e.g., \{‘x’: 2} means ‘x’ is substituted with 2
*   **variables** (`Optional`\[`Dict`\[`Union`\[`str`, `int`], `Tuple`\[`Union`\[`str`, `int`], `float`]]]) – replace variables by weighted other variable need to copy everything using name reference to make sure that indices are matched correctly. The lower and upper bounds are updated accordingly. e.g., \{‘x’: (‘y’, 2)} means ‘x’ is substituted with ‘y’ \* 2

**Return type**

`QuadraticProgram`

**Returns**

An optimization problem by substituting variables with constants or other variables. If the substitution is valid, QuadraticProgram.status is still QuadraticProgram.Status.VALIAD. Otherwise, it gets QuadraticProgram.Status.INFEASIBLE.

**Raises**

[**QiskitOptimizationError**](qiskit.optimization.QiskitOptimizationError "qiskit.optimization.QiskitOptimizationError") – if the substitution is invalid as follows. - Same variable is substituted multiple times. - Coefficient of variable substitution is zero.

### to\_docplex

<span id="qiskit.optimization.problems.QuadraticProgram.to_docplex" />

`to_docplex()`

Returns a docplex model corresponding to this quadratic program.

**Return type**

`Model`

**Returns**

The docplex model corresponding to this quadratic program.

**Raises**

[**QiskitOptimizationError**](qiskit.optimization.QiskitOptimizationError "qiskit.optimization.QiskitOptimizationError") – if non-supported elements (should never happen).

### to\_ising

<span id="qiskit.optimization.problems.QuadraticProgram.to_ising" />

`to_ising()`

Return the Ising Hamiltonian of this problem.

**Returns**

The qubit operator for the problem offset: The constant value in the Ising Hamiltonian.

**Return type**

qubit\_op

**Raises**

*   [**QiskitOptimizationError**](qiskit.optimization.QiskitOptimizationError "qiskit.optimization.QiskitOptimizationError") – If a variable type is not binary.
*   [**QiskitOptimizationError**](qiskit.optimization.QiskitOptimizationError "qiskit.optimization.QiskitOptimizationError") – If constraints exist in the problem.

### variables

<span id="qiskit.optimization.problems.QuadraticProgram.variables" />

`property variables`

Returns the list of variables of the quadratic program.

**Return type**

`List`\[`Variable`]

**Returns**

List of variables.

### variables\_index

<span id="qiskit.optimization.problems.QuadraticProgram.variables_index" />

`property variables_index`

Returns the dictionary that maps the name of a variable to its index.

**Return type**

`Dict`\[`str`, `int`]

**Returns**

The variable index dictionary.

### write\_to\_lp\_file

<span id="qiskit.optimization.problems.QuadraticProgram.write_to_lp_file" />

`write_to_lp_file(filename)`

Writes the quadratic program to an LP file.

**Parameters**

**filename** (`str`) – The filename of the file the model is written to. If filename is a directory, file name ‘my\_problem.lp’ is appended. If filename does not end with ‘.lp’, suffix ‘.lp’ is appended.

**Raises**

*   **OSError** – If this cannot open a file.
*   **DOcplexException** – If filename is an empty string

**Return type**

`None`

